# iai_weiss_wpg_300-120-gripper

./: CMakeLists.txt  LICENSE  readme.md
griplink/: README.md
griplink/griplink/: CMakeLists.txt  package.xml
griplink/griplink/include/griplink/griplink_node/: common.hpp  griplink_node.hpp
griplink/griplink/src/griplink_node/: common.cpp  griplink_node.cpp
griplink/griplink_interfaces/: CMakeLists.txt
griplink/griplink_interfaces/msg/: Values.msg
urdf/: wpg_300-120_meshed.urdf
wpg_300_120_description/: CMakeLists.txt  package.xml
wpg_300_120_description/launch/: display.launch.py  gripper_interface.launch.py
wpg_300_120_description/meshes/: base.stl  left_finger.stl
wpg_300_120_description/rviz2/: rviz.rviz
wpg_300_120_description/urdf/: wpg_300-120_meshed.urdf  wpg_300-120_meshed.urdf.xacro
