<?xml version="1.0"?>
<package format="3">
  <name>wpg_300_120_description</name>
  <version>0.0.0</version>
  <description>WSG 300-120 Gripper Description</description>

  <maintainer email="you@example.com">Mitesh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
